# drf-proj

./: .env_example  README.md  pyproject.toml
cars/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: course_fixture.json  groups.json  initial_data.json  lesson_fixture.json  payments.json  user_fixture.json
materials/: admin.py  models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py  0003_alter_course_description_alter_lesson_description_and_more.py  0003_course_last_update.py
users/: admin.py  models.py  serializers.py  token.json  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments_stripe_session_id.py  0002_user_username.py
